--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,11 +1,11 @@
 
-team.crux.name = Crux inpire
-team.green.name = The lost impire 
-team.sharded.name = Vengeance impire 
+team.crux.name = Crux empire
+team.green.name = The lost empire 
+team.sharded.name = Vengeance empire 
 
 sectors.underattack = [red]Attacks incoming! {0}% lost
-threat.low = [green]little
-threat.medium = [yellow]harsh
-threat.high = [orange]dangerous
-threat.extreme = [red]erradical
-threat.eradication = [black]unbeatable
+threat.low = [green]Little
+threat.medium = [yellow]Harsh
+threat.high = [orange]Dangerous
+threat.extreme = [red]Erradical
+threat.eradication = [black]Unbearable
