--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,7 +1,9 @@
-
+# override vanilla
 team.crux.name = Crux empire
 team.green.name = The lost empire 
 team.sharded.name = Vengeance empire 
+team.blue.name = The rise empire 
+team.malis.name = Scarced empire 
 
 sectors.underattack = [red]Attacks incoming! {0}% lost
 threat.low = [green]Little
@@ -9,3 +11,13 @@ threat.medium = [yellow]Harsh
 threat.high = [orange]Dangerous
 threat.extreme = [red]Erradical
 threat.eradication = [black]Unbearable
+
+research = Require old tech
+researched = [gray]{0}% Retrieved old tech
+research.progress = [gray]{0}% Retrieving old tech 
+
+complete: [lightred] Retrieving Pending[]
+requirement.research = Require old tech: {0}
+requirement.produce = Acquire: {0}
+requirement.capture = Push enemies back: {0}
+requirement.onsector = land on: {0}
