--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -16,7 +16,7 @@ research = Require old tech
 researched = [gray]{0}% Retrieved old tech
 research.progress = [gray]{0}% Retrieving old tech 
 
-complete: [lightred]Retrieving Pending[]
+complete: Retrieving Pending[]
 requirement.research = Require old tech: {0}
 requirement.produce = Acquire: {0}
 requirement.capture = Push enemies back: {0}
