--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -21,3 +21,6 @@ requirement.research = Require old tech: {0}
 requirement.produce = Acquire: {0}
 requirement.capture = Push enemies back: {0}
 requirement.onsector = land on: {0}
+
+sectors.enemybase = [darkred]Enemy Outpost[]
+sectors.underattack.nodamage = [red]Taking control
