--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -22,5 +22,5 @@ requirement.produce = Acquire: {0}
 requirement.capture = Push enemies back: {0}
 requirement.onsector = land on: {0}
 
-sectors.enemybase = [darkred]Enemy Outpost[]
+sectors.enemybase = [orange]Enemy Outpost[]
 sectors.underattack.nodamage = [red]Taking control
