--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -6,11 +6,11 @@ team.blue.name = The rise empire
 team.malis.name = Scarced empire 
 
 sectors.underattack = [red]Attacks incoming! {0}% lost
-threat.low = [green]Little
-threat.medium = [yellow]Harsh
-threat.high = [orange]Dangerous
-threat.extreme = [red]Erradical
-threat.eradication = [black]Unbearable
+threat.low = [green]Threat danger level one
+threat.medium = [yellow]Threat danger level two
+threat.high = [orange]Threat danger level three
+threat.extreme = [red]Threat danger level four
+threat.eradication = [black]Threat danger level five
 
 research = Require old tech
 researched = [gray]{0}% Retrieved old tech
